--- a/01-data.Rmd
+++ b/01-data.Rmd
@@ -29,51 +29,114 @@ SHP_geilo <- st_transform(SHP_geilo, 25833)
 
 ```
 
-Download basemaps
-```{r}
-SHP_geilo_2 <- st_transform(SHP_geilo, 3857)
-base_geilo <- basemap_gglayer(SHP_geilo_2, 
-                      map_type = "topographic", 
-                      map_service = "osm")
-ggplot() + 
-  base_geilo +
-  scale_fill_identity() + 
-  #geom_sf()+
-  theme_bw()+
-  geom_sf(data = SHP_geilo_2,
-          fill = "brown",
-          colour = "black",
-          size=1.4)
-
-base_geilo <- st_transform(base_geilo, 25833)
-```
-
 
 
 ```{r, import depth data}
 
-depths_tydal <- read_csv("Data/Tydal/Torvdybder_Tydal_stasjon.csv")
+depths_tydal <- readr::read_csv("Data/Tydal/Torvdybder_Tydal_stasjon.csv")
 depths_geilo <- read.csv("Data/Geilo/torvdybder.csv", sep=";")
 
 
-depths_tydal <- st_as_sf(x = depths_tydal, 
+depths_tydal <- sf::st_as_sf(x = depths_tydal, 
                         coords = c("coords.x1", "coords.x2"),
                         crs = "+init=epsg:25833")
 depths_geilo <- st_as_sf(x = depths_geilo, 
                         coords = c("x", "y"),
                         crs = "+init=epsg:25832")
 depths_geilo <- st_transform(depths_geilo, 25833)
-tmap_mode("plot")
 
-# confirm overlap
-tile <- tmaptools::read_osm(x = SHP_geilo
-                            )
-tm_shape(base_geilo[,,,2])+
-  tm_raster()+
-tm_shape(SHP_geilo)+
-    tm_polygons()+
-  tm_shape(depths_geilo)+
-    tm_dots()
-# ok
+
+```
+```{r, fig.cap="Confirming overlap between shape file and depth measurements"}
+# Confirm overlap. Using base plotting to avoid 
+# auto-transformation
+plot(SHP_geilo$geometry,
+     col="red"
+     )
+plot(depths_geilo$geometry, 
+     pch = 16,
+     col="grey",
+     cex=.1,
+     add=T)
+#OK
+
+```
+
+Download basemaps
+```{r, warning=F, message=F}
+# osmplotr want bboxes in latlong
+SHP_geilo_ll <- sf::st_transform(SHP_geilo, 4326)
+SHP_tydal_ll <- sf::st_transform(SHP_tydal, 4326)
+
+bb_Geilo <- sf::st_bbox(SHP_geilo_ll)
+bb_Tydal <- sf::st_bbox(SHP_tydal_ll)
+
+# GEILO
+base_geilo_hw <- 
+  osmplotr::extract_osm_objects(bbox = bb_Geilo,
+                                            key = c("highway"),
+                                            sf = T)
+base_geilo_building <- 
+  osmplotr::extract_osm_objects(bbox = bb_Geilo,
+                                            key = c("building"),
+                                            sf = T)
+base_geilo_ww <- 
+  osmplotr::extract_osm_objects(bbox = bb_Geilo,
+                                            key = c("waterway"),
+                                            sf = T,
+                                            return_type = "line")
+
+# TYDAL
+base_tydal_hw <- 
+  osmplotr::extract_osm_objects(bbox = bb_Tydal,
+                                            key = "highway",
+                                            sf = T)
+base_tydal_building <- 
+  osmplotr::extract_osm_objects(bbox = bb_Tydal,
+                                            key = c("building"),
+                                            sf = T)
+base_tydal_ww <- 
+  osmplotr::extract_osm_objects(bbox = bb_Tydal,
+                                            key = c("waterway"),
+                                            sf = T,
+                                            return_type = "line")
+
+```
+Plot static map
+```{r, fig.cap="Map of Geilo and Tydal test sites. The peatland is deliminated as a grey polygon(s). Black dots are depth measurements. For Tydal, the size of the dots reflects the measured peat depths in meters."}
+static_geilo <- tm_shape(SHP_geilo_ll)+
+  tm_polygons()+
+tm_shape(depths_geilo)+
+  tm_dots()+
+tm_shape(base_geilo_hw)+
+  tm_lines()+
+tm_shape(base_geilo_ww)+
+  tm_lines(col="blue",
+           size=2)+
+tm_shape(base_geilo_building)+
+  tm_polygons(col="black",
+              alpha = .3)+
+tm_compass()+
+tm_scale_bar()+
+  tm_layout(title="Geilo")
+
+static_tydal <- tm_shape(SHP_tydal_ll)+
+  tm_polygons()+
+tm_shape(depths_tydal)+
+  tm_dots(size="Dybde")+
+#tm_shape(base_tydal_hw)+
+#  tm_lines()+
+tm_shape(base_tydal_ww)+
+  tm_lines(col="blue",
+           size=2)+
+#tm_shape(base_tydal_building)+
+#  tm_polygons(col="black",
+#              alpha = .3)+
+tm_compass()+
+tm_scale_bar()+
+  tm_layout(title="Tydal")
+
+tmap_arrange(static_geilo,
+             static_tydal)
 ```
 
